--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,5 +1,6 @@
 <%= month_calendar events: @meetings do |date, meetings| %>
   <%= date %>
+  <p>文字です</p>
 
   <% meetings.each do |meeting| %>
     <div>
