週間カレンダーに変更

--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,4 +1,4 @@
-<%= month_calendar events: @meetings do |date, meetings| %>
+<%= week_calendar events: @meetings do |date, meetings| %>
   <%= date %>
   <p>文字です</p>
 
